--- a/Appointment/app/build.gradle
+++ b/Appointment/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "appointment.test.co.jp.appointment"
+        applicationId "jp.co.test.appointment"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
