--- a/Appointment/app/src/main/AndroidManifest.xml
+++ b/Appointment/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="appointment.test.co.jp.appointment" >
+    package="jp.co.test.appointment" >
 
     <application
         android:allowBackup="true"
