--- a/Appointment/app/build.gradle
+++ b/Appointment/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.6.5@aar') {
         transitive = true
     }
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
 }
